--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
-  "name": "@mettle-studio/strapi-provider-upload-cloudflare-2",
+  "name": "cloudflare-upload-provider-v2",
   "version": "0.1.5",
-  "maintainers": [
-    "savvas@mettle-studio.com",
-    "sam@mettle-studio.com"
-  ],
   "keywords": [
     "upload",
     "cloudflare",
@@ -28,9 +24,9 @@
     "jest": "^27.5.1",
     "stream": "0.0.2"
   },
-  "homepage": "https://github.com/mettle-studio/strapi-provider-upload-cloudflare-2#readme",
+  "homepage": "https://github.com/ThisNarciss/cloudflare-upload-provider-v2#readme",
   "bugs": {
-    "url": "https://github.com/mettle-studio/strapi-provider-upload-cloudflare-2/issues"
+    "url": "https://github.com/ThisNarciss/cloudflare-upload-provider-v2/issues"
   },
   "description": "Strapi provider for uploading and deleting to/from Cloudflare streams and images compatible",
   "scripts": {
