--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudflare-upload-provider-v2",
-  "version": "0.1.5",
+  "version": "1.1.0",
   "keywords": [
     "upload",
     "cloudflare",
@@ -13,15 +13,15 @@
     "lib": "./lib"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.5.1",
     "axios": "^0.24.0",
     "babel-eslint": "^8.2.6",
     "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "form-data": "^4.0.0",
     "jest": "^27.5.1",
+    "prettier": "^2.5.1",
     "stream": "0.0.2"
   },
   "homepage": "https://github.com/ThisNarciss/cloudflare-upload-provider-v2#readme",
@@ -37,6 +37,7 @@
   "author": "Sanjay Thakur",
   "license": "MIT",
   "dependencies": {
+    "cloudflare-upload-provider-v2": "^1.1.0",
     "dotenv": "^16.0.0",
     "form-data": "^4.0.0",
     "tus": "^0.1.7",
